fix: style spacing of landing-page section-3

--- a/src/components/landing-page/happy-client/happyClient.module.scss
+++ b/src/components/landing-page/happy-client/happyClient.module.scss
@@ -14,7 +14,7 @@
 
 // using the BEM system
 .container {
-  max-width: 1200px;
+  // max-width: 1200px;
   width: 100%;
   margin: 0 auto;
   padding: 0 1.25rem;
